--- a/client/src/components/Card/card.module.css
+++ b/client/src/components/Card/card.module.css
@@ -123,8 +123,8 @@
 }
 
 .button:hover {
-  background-color: #aa5d10;
-  border: 1px solid #000000;
+  background-color: #0a9c64;
+  border: 1px solid #0a9c64;
 }
 
 .img {
