--- a/client/src/components/Paginado/paginado.module.css
+++ b/client/src/components/Paginado/paginado.module.css
@@ -22,6 +22,85 @@
   text-shadow: 0 0 0.1em white, 0 0 0.45em #1310aa;
 }
 
+.prev {
+  width: 4rem;
+  height: 1.5rem;
+  cursor: pointer;
+  display: flex;
+  margin: 0.3rem;
+  color: wheat;
+  align-items: center;
+  justify-content: center;
+  border-radius: 40%;
+  border: none;
+  background-color: #0db80d8a;
+  margin-bottom: -1rem;
+  font-size: 1rem;
+  filter: drop-shadow(2px 4px 8px #9c690a);
+  text-shadow: 0 0 0.1em white, 0 0 0.45em #1310aa;
+}
+
+.prevMax {
+  width: 4rem;
+  height: 1.5rem;
+  cursor: pointer;
+  display: flex;
+  margin: 0.3rem;
+  color: wheat;
+  align-items: center;
+  justify-content: center;
+  border-radius: 40%;
+  border: none;
+  background-color: #b80d0d;
+  margin-bottom: -1rem;
+  font-size: 1rem;
+  filter: drop-shadow(2px 4px 8px #9c690a);
+  text-shadow: 0 0 0.1em white, 0 0 0.45em #1310aa;
+}
+
+.next {
+  width: 4rem;
+  height: 1.5rem;
+  cursor: pointer;
+  display: flex;
+  margin: 0.3rem;
+  color: wheat;
+  align-items: center;
+  justify-content: center;
+  border-radius: 40%;
+  border: none;
+  background-color: #0db80d8a;
+  margin-bottom: -1rem;
+  font-size: 1rem;
+  filter: drop-shadow(2px 4px 8px #9c690a);
+  text-shadow: 0 0 0.1em white, 0 0 0.45em #1310aa;
+}
+
+.nextMax {
+  width: 4rem;
+  height: 1.5rem;
+  cursor: pointer;
+  display: flex;
+  margin: 0.3rem;
+  color: wheat;
+  align-items: center;
+  justify-content: center;
+  border-radius: 40%;
+  border: none;
+  background-color: #b80d0d;
+  margin-bottom: -1rem;
+  font-size: 1rem;
+  filter: drop-shadow(2px 4px 8px #9c690a);
+  text-shadow: 0 0 0.1em white, 0 0 0.45em #1310aa;
+}
+
+.prev:hover {
+  background-color: #0db80d;
+}
+
+.next:hover {
+  background-color: #0db80d;
+}
 
 .button:hover {
   box-shadow: inset 0 0 0.5em 0 rgb(112, 216, 147), 0 0 0.5em 0 rgb(112, 216, 147);
