--- a/client/src/components/Paginado/paginado.module.css
+++ b/client/src/components/Paginado/paginado.module.css
@@ -22,6 +22,22 @@
   text-shadow: 0 0 0.1em white, 0 0 0.45em #1310aa;
 }
 
+.button2 {
+  width: 2.2rem;
+  height: 2rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 40%;
+  border: none;
+  background-color: #0db80d;
+  margin-bottom: -1rem;
+  font-size: 1rem;
+  filter: drop-shadow(2px 4px 8px #9c690a);
+  text-shadow: 0 0 0.1em white, 0 0 0.45em #1310aa;
+}
+
 .prev {
   width: 4rem;
   height: 1.5rem;
@@ -31,7 +47,7 @@
   color: wheat;
   align-items: center;
   justify-content: center;
-  border-radius: 40%;
+  border-radius: 50% 0 0 50%;
   border: none;
   background-color: #0db80d8a;
   margin-bottom: -1rem;
@@ -49,7 +65,7 @@
   color: wheat;
   align-items: center;
   justify-content: center;
-  border-radius: 40%;
+  border-radius: 50% 0 0 50%;
   border: none;
   background-color: #b80d0d;
   margin-bottom: -1rem;
@@ -67,7 +83,7 @@
   color: wheat;
   align-items: center;
   justify-content: center;
-  border-radius: 40%;
+  border-radius: 0 50% 50% 0;
   border: none;
   background-color: #0db80d8a;
   margin-bottom: -1rem;
@@ -85,7 +101,7 @@
   color: wheat;
   align-items: center;
   justify-content: center;
-  border-radius: 40%;
+  border-radius: 0 70% 70% 0;
   border: none;
   background-color: #b80d0d;
   margin-bottom: -1rem;
