--- a/client/src/components/LandingPage/landingPage.module.css
+++ b/client/src/components/LandingPage/landingPage.module.css
@@ -28,12 +28,12 @@
   display: inline-block;
   cursor: pointer;
   text-decoration: none;
-  color: #aa5d10;
+  color: #ffe993;
   border: #aa5d10 0.125em solid;
   padding: 0.25em 1em;
   border-radius: 0.25em;
   text-shadow: 0 0 0.125em white, 0 0 0.45em #aa5d10;
-  box-shadow: inset 0 0 0.5em 0 #aa5d10, 0 0 0.5em 0 #aa5d10;
+  box-shadow: 0 0 2em 0 #ffffff, 0 0 2em 0 #ffe993;
   position: relative;
   transition: background-color 100ms linear, box-shadow 100ms linear;
 }
